--- a/styles/assignment.css
+++ b/styles/assignment.css
@@ -3,7 +3,9 @@
     font-family: 'Work Sans';
 }
 
+
 /* Header Section */
+
 .header {
     width: auto;
     height: 750px;
@@ -15,7 +17,6 @@
     padding-left:  845px;
     padding-right:  230px;
 }
-
 .header-title {
     font-weight: 700px;
     font-size: 65px;
@@ -38,6 +39,7 @@
         background: #FD6E0A;
         border-radius: 5px;
 }
+
 
 /* Failure Section */
 
@@ -70,19 +72,18 @@ li {
     color: #444343;
 }
 
+
 /* My plans Section */
 
 .plan-section {
     text-align: center;
     padding: 137px 230px;
 }
-
 .plans-container {
     padding-top: 30px;
     display: flex;
     justify-content: space-between;
 }
-
 .plan-title {
     margin-top: 10px;
     font-weight: 700;
@@ -90,7 +91,6 @@ li {
     text-align: center;
     color: #151414;
 }
-
 .plan-description {
     margin-top: 10px;
     font-weight: 500;
@@ -98,6 +98,7 @@ li {
     text-align: center;
     color: #737272;
 }
+
 
 /* Call now Section */
 
@@ -115,7 +116,6 @@ li {
     color: #FFFFFF;
     margin-bottom: 15px;
 }
-
 .call-now {
     padding: 59px;
     padding-right: 617px;
@@ -132,6 +132,49 @@ li {
     border-radius: 5px;
 }
 
+
 /* Footer Section */
 
-
+.footer {
+    margin-top: 130px;
+    display: flex;
+    gap: 330px;
+    background-color: #151414;
+    padding: 130px 230px;
+    color: #FFFFFF;
+}
+.footer-title {
+    font-weight: 700;
+    font-size: 40px;
+    margin-bottom: 15px;
+}
+.footer-description {
+    font-weight: 400;
+    font-size: 16px;
+    margin-bottom: 15px;
+}
+.subs-title {   
+    font-weight: 600;
+    font-size: 25px;
+    margin-bottom: 15px;
+}
+input {
+    border: 5;
+    width: 100%;
+    height: 50px;
+    background-color: #151414;
+    margin-bottom: 10px;
+    border-radius: 8px;
+    border-color: #FFF8F3;
+}
+.btn-third {
+    color: #F15B22;
+    font-weight: 600px;
+    font-size: 20px;
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+}
+.footer a {
+    text-decoration: none;
+}
